Update counter reflex

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<a href="#"
+   data-reflex="click->Counter#increment"
+   data-step="1"
+   data-count="<%= @count.to_i %>">
+  Increment <%= @count.to_i %>
+</a>
